--- a/client/package.json
+++ b/client/package.json
@@ -1,40 +1,40 @@
 {
-          "name": "nasa-fe",
-          "version": "1.0.1",
-          "private": true,
-          "dependencies": {
-                    "arwes": "^1.0.0-alpha.5",
-                    "react": "^17.0.2",
-                    "react-dom": "^17.0.2",
-                    "react-router-dom": "^5.3.0",
-                    "react-scripts": "^5.0.0"
-          },
-          "scripts": {
-                    "start": "react-scripts start",
-                    "build": "react-scripts build",
-                    "test": "react-scripts test",
-                    "eject": "react-scripts eject"
-          },
-          "eslintConfig": {
-                    "extends": [
-                              "react-app",
-                              "react-app/jest"
-                    ]
-          },
-          "browserslist": {
-                    "production": [
-                              ">0.2%",
-                              "not dead",
-                              "not op_mini all"
-                    ],
-                    "development": [
-                              "last 1 chrome version",
-                              "last 1 firefox version",
-                              "last 1 safari version"
-                    ]
-          },
-          "overrides": {
-                    "nth-check@1.0.2": "2.0.1"
-          },
-          "packageManager": "pnpm@9.5.0+sha512.140036830124618d624a2187b50d04289d5a087f326c9edfc0ccd733d76c4f52c3a313d4fc148794a2a9d81553016004e6742e8cf850670268a7387fc220c903"
+  "name": "nasa-fe",
+  "version": "1.0.1",
+  "private": true,
+  "dependencies": {
+    "arwes": "^1.0.0-alpha.5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "^5.0.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "BUILD_PATH=../server/public react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "overrides": {
+    "nth-check@1.0.2": "2.0.1"
+  },
+  "packageManager": "pnpm@9.5.0+sha512.140036830124618d624a2187b50d04289d5a087f326c9edfc0ccd733d76c4f52c3a313d4fc148794a2a9d81553016004e6742e8cf850670268a7387fc220c903"
 }
