--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "server": "npm run watch --prefix server ",
     "client": "npm start --prefix client",
     "watch": "npm run server & npm run client",
+    "deploy": "npm run build --prefix client && npm start --prefix server",
     "test": "npm run test --prefix && npm run test --prefix client"
   },
   "keywords": [],
