--- a/server/package.json
+++ b/server/package.json
@@ -18,11 +18,16 @@
     "csv-parse": "^5.5.6",
     "express": "^4.19.2",
     "jest": "^29.7.0",
+    "mongoose": "^8.5.1",
     "nodemon": "^3.1.4",
     "parse": "^5.3.0",
     "pm2": "^5.4.2"
   },
   "devDependencies": {
     "supertest": "^7.0.0"
-  }
+  },
+  "directories": {
+    "lib": "lib"
+  },
+  "keywords": []
 }
