--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -1,17 +1,23 @@
 name: NASA Project CI
-on: 
+on:
   push:
-    branches: [ main ]
-  pull_request: 
-    branches: [ main ]
-jobs: 
-  build: 
+    branches: [main]
+  pull_request:
+    branches: [main]
+jobs:
+  build:
+    env:
+      CI: true
+    strategy:
+      matrix:
+        node-version: [14.x, 16.x]
     runs-on: ubuntu-latest
-    steps: 
+    steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js version 16 
+      - name: Use Node.js version ${{ matrix.node-version }}
         uses: actions/setup-node@
-        with: 
-          node-version: "16"
-      - run: npm install 
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: npm install
       - run: npm run build --prefix client
+      - run: npm test
